--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
-    <select class="breed-select"></select>
-    <p class="loader">Loading data, please wait...</p>
-    <p class="error">Oops! Something went wrong! Try reloading the page!</p>
-    <div class="cat-info"></div>
+    <div class="container">
+      <select class="breed-select"></select>
+      <p class="loader">Loading data, please wait...</p>
+      <p class="error">Oops! Something went wrong! Try reloading the page!</p>
+      <div class="cat-info"></div>
+    </div>
 
     <script src="index.js" type="module"></script>
   </body>
