--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <select class="breed-select"></select>
+      <select class="breed-select" id="single"></select>
       <p class="loader">Loading data, please wait...</p>
       <p class="error">Oops! Something went wrong! Try reloading the page!</p>
       <div class="cat-info"></div>
