--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <select class="breed-select" id="single"></select>
-      <p class="loader">Loading data, please wait...</p>
+      <p class="loader"></p>
       <p class="error">Oops! Something went wrong! Try reloading the page!</p>
       <div class="cat-info"></div>
     </div>
