--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
       <div class="cat-info"></div>
     </div>
 
-    <script src="index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
